# whisper-rust-ort

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile.container  PLAN.md  README.md  RESULTS.csv  RESULTS.md  benchmark_faster_whisper.py  benchmark_with_hf_pipeline.py  benchmark_without_hf_pipeline.py  benchmark_without_hf_pipeline.sh  compare.sh  compare_container_benchmarks.py  compare_end_to_end_latencies.py  compare_latencies.py  config.json  merge_results.sh  optimize_models.sh  quantize_onnx_int8.py  run_all_and_compare.sh  run_benchmark_without_hf_pipeline_rust.sh  run_benchmark_without_hf_pipeline_rust_int8.sh  run_container_4c4g_compare.sh  run_container_benchmarks.sh  update_results_md.py
backup_results/: RESULTS.csv  RESULTS.md
results.old/benchmarks/container_4c4g/epyc-9654/: summary_table.csv  summary_table.md
results.old/benchmarks/container_4c4g/epyc-9654/faster_whisper_fp32/: inference_per_file.csv  inference_per_file.json  inference_summary.json
results.old/benchmarks/container_4c4g/epyc-9654/faster_whisper_int8/: audio.transcript.txt  inference_per_file.csv  inference_per_file.json  inference_summary.json
results.old/benchmarks/container_4c4g/epyc-9654/logs/: faster_whisper_fp32.time.txt  faster_whisper_int8.time.txt  with_hf_pipeline.time.txt  without_hf_pipeline_py.time.txt  without_hf_pipeline_rust.time.txt  (+1 more)
results.old/benchmarks/container_8c4g/epyc-9654/: summary_table.csv  summary_table.md
scripts/: export_onnx_whisper.py  optimize_onnx_whisper.py  run_container_4c4g_inner.sh  run_container_benchmarks_inner.sh
src/: main.rs
(+42 files in other folders)
