[package]
name = "whisper_ort_bench"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
ndarray = "0.16"
ordered-float = "4.2"
rustfft = "6.2"
tokenizers = "0.15"
rayon = "1.10"

# Audio decoding (wav/flac/mp3, depending on enabled formats)
symphonia = { version = "0.5", features = ["aac", "flac", "mp3", "pcm", "wav", "vorbis"] }

# ONNX Runtime
ort = { version = "=2.0.0-rc.6", features = ["ndarray"] }
